--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,1 +1,1 @@
-webdriver.chrome.driver=C:\\Compiler\\chromedriver-win64\\chromedriver.exe
+webdriver.chrome.driver=C:\\Users\\mhddf\\OneDrive\\Dokumen\\Kuliah\\SMT-6\\PPL\\chromedriver-win64\\chromedriver.exe
